--- a/webapp/src/styles/custom.css
+++ b/webapp/src/styles/custom.css
@@ -1,3 +1,22 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;500;600&family=Nunito:wght@200;300;400;500;600;700&display=swap");
+body {
+  font-family: "Nunito", sans-serif;
+  color: rgba(47, 43, 61, 0.78);
+  /*background-color: rgb(248, 247, 250);*/
+  line-height: 1.467;
+  font-size: 0.9375rem;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: rgba(47, 43, 61, 0.78);
+  font-weight: 600;
+}
+
 .layout-main-container {
   padding: 6rem 1rem 1rem 2rem;
 }
@@ -5,16 +24,79 @@
 .layout-sidebar {
   top: 6rem;
   left: 1rem;
+  height: calc(100vh - 7rem);
+  padding: 0.5rem 1rem;
 }
 
 .layout-topbar .layout-topbar-logo {
   width: 220px;
 }
 
-.layout-sidebar {
-  height: calc(100vh - 7rem);
+.layout-menu ul a {
+  margin-top: 0.25rem;
+  padding: 0.75rem 1rem;
+  border-radius: 5px;
+}
+
+.layout-menu ul a .layout-menuitem-icon {
+  margin-right: 1rem;
+  font-size: 1.1rem;
+  color: rgba(47, 43, 61, 0.68);
+}
+
+.layout-menu .layout-root-menuitem > .layout-menuitem-root-text {
+  font-weight: 500;
+  color: rgba(47, 43, 61, 0.42);
+  font-size: 1rem;
+  padding: 0 0.5rem;
+  margin: 0.5rem 0;
+  text-transform: none;
+}
+
+.layout-menu ul a.active-route {
+  box-shadow: rgba(115, 103, 240, 0.48) 0px 2px 6px;
+  background: linear-gradient(72.47deg, rgb(115, 103, 240) 22.16%, rgba(115, 103, 240, 0.7) 76.47%);
+}
+
+.layout-menu ul a.active-route .layout-menuitem-text,
+.layout-menu ul a.active-route .layout-menuitem-icon {
+  color: #ffffff;
+}
+
+.layout-menuitem-text {
+  font-weight: 500;
+  line-height: 1.467;
+  font-size: 1.05rem;
+  color: rgba(47, 43, 61, 0.68);
 }
 
 .form p {
   margin-bottom: 0;
+}
+
+.product-image-list {
+  cursor: all-scroll;
+  opacity: 0.7;
+}
+
+.p-card {
+  background-color: rgb(255, 255, 255);
+  color: rgba(47, 43, 61, 0.78);
+  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  border-radius: 6px;
+  box-shadow: rgba(47, 43, 61, 0.1) 0 4px 18px 0;
+  background-image: none;
+  overflow: hidden;
+}
+
+.p-datatable .p-datatable-thead > tr > th {
+  color: inherit;
+}
+
+.p-datatable .p-datatable-header {
+  padding-left: 0;
+}
+
+.p-datatable .p-datatable-tbody > tr > td {
+  padding: 0.5rem 1rem;
 }
